--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 # Application running port
 APP_PORT=3000
 
-# MySQL
+# Postgres
+# PostgreSQL config
 DB_TYPE=postgres
 DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=24081946Arsen.
-DB_NAME=ticket_up
-DATABASE_URL_MYSQL='mysql://root:secret@mysql:3306/ticket_up'
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_NAME=social_networck
 
 # SMTP
 SMTP_USER=ars.hovhannisyan00@gmail.com
