--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,10 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
-DB_NAME=social_networck
+DB_NAME=social_network
+DB_DEFAULT_NAME=postgres
+DB_DEFAULT_PASSWORD=postgres
+DB_DEFAULT_NAME=postgres
 
 # SMTP
 SMTP_USER=ars.hovhannisyan00@gmail.com
