feat: add refresh token anddelete all ts errors

--- a/.env.example
+++ b/.env.example
@@ -20,5 +20,8 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_SECURE=true
 
-# JWT-SECRET
-JWT_SECRET=secret
+# JWT
+JWT_ACCESS_SECRET=secret1
+JWT_REFRESH_SECRET=ssecret2
+A_TOKEN_EXPIRES=15m
+R_TOKEN_EXPIRES=7d
